--- a/content/_includes/page.html
+++ b/content/_includes/page.html
@@ -12,6 +12,7 @@
 <h1>DailyShip 🚢</h1>
 </a>
 <li><a href='https://qchat.rizon.net/?channels=dailyship'>Chat</a>
+<li><a href='https://github.com/hackdash/dailyship'>Code</a>
 <li><a href='/news'>News</a>
 </ul>
 </nav>
