--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,6 @@ a {
 	text-decoration:none;
 }
 a:hover {background:#001020;}
-aside {float:right;}
 h1 {
 	margin:0;
 	font-variant: small-caps;
@@ -39,18 +38,16 @@ nav ul {padding:0;margin:0 -1rem;}
 ul {margin:0;}
 ds-clock {
 	background:rgba(0,0,0,.5);
+	border-radius:8px;
 	display:block;
-	border-radius: 8px;
 	float:left;
+	margin:0 -.5em;
 	padding:0 .5em;
-	margin: 0 -.5em;
 }
-.menu {
-	border-width:0 0 1em;
-}
-.menu a {padding-top:1.5rem;}
-.menu a h1 {margin-top:-1.5rem;}
-.row li:last-child {flex-grow:1;}
 .big {font-size:2em;}
 .grow {flex-grow:1;}
+.menu {border-width:0 0 1em;}
+.menu a {padding-top:1.5rem;}
+.menu a h1 {margin-top:-1.5rem;}
 .row {display:flex;flex-direction:row;}
+.row li:last-child {flex-grow:1;}
