--- a/content/_includes/page.html
+++ b/content/_includes/page.html
@@ -6,14 +6,13 @@
 <title>{{title}}</title>
 <link href='/style.css' rel='stylesheet'>
 <link rel='icon' href='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚢</text></svg>'>
-<nav>
+<nav class='brb'>
 <ul class='menu row'>
-<li><a href='/'>
-<h1>DailyShip 🚢</h1>
-</a>
+<li><a href='/'><h1>DailyShip 🚢</h1></a>
 <li><a href='https://qchat.rizon.net/?channels=dailyship'>Chat</a>
 <li><a href='https://github.com/hackdash/dailyship'>Code</a>
-<li><a href='/news'>News</a>
+<li class='grow'><a href='/news'>News</a>
+<li><a href='/404.html'>🐙</a></p>
 </ul>
 </nav>
 {{content}}
