--- a/public/style.css
+++ b/public/style.css
@@ -27,6 +27,7 @@ hr, .menu {
 	border-width:0 0 .5em;
 }
 hr {margin:1em -1em;}
+.brb {margin: 0 0 1.5rem;}
 nav a, nav .a {
 	display:block;
 	line-height:2;
@@ -38,15 +39,18 @@ ul {margin:0;}
 ds-clock {
 	background:rgba(0,0,0,.5);
 	border-radius:8px;
+	clear:right;
 	display:block;
 	float:left;
 	margin:0 -.5em;
 	padding:0 .5em;
 }
 .big {font-size:2em;}
+.clear {overflow:hidden;}
 .grow {flex-grow:1;}
-.menu {border-width:0 0 1em;}
+.menu {
+	border-width:0 0 1em;
+}
 .menu a {padding-top:1.5rem;}
 .menu a h1 {margin-top:-1.5rem;}
 .row {display:flex;flex-direction:row;}
-.row li:last-child {flex-grow:1;}
