--- a/content/_includes/page.webc
+++ b/content/_includes/page.webc
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang='en'>
 <meta charset='utf-8'/>
-<meta name='theme-color' content='#000000'/>
+<meta name='theme-color' content='#002040'/>
 <meta name='viewport' content='width=device-width, initial-scale=1'/>
-<title>{{title}}</title>
+<title @text='title'></title>
 <link href='/style.css' rel='stylesheet'>
+<link :href='getBundleFileUrl("css")' rel='stylesheet' webc:keep>
 <link rel='icon' href='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚢</text></svg>'>
 <nav class='brb'>
 <ul class='menu row'>
@@ -12,7 +13,8 @@
 <li><a href='https://qchat.rizon.net/?channels=dailyship'>Chat</a>
 <li><a href='https://github.com/hackdash/dailyship'>Code</a>
 <li class='grow'><a href='/news'>News</a>
-<li><a href='/404.html'>🐙</a></p>
+<li><a href='/404.html'>🐙</a>
 </ul>
 </nav>
-{{content}}
+<div @raw='content' webc:nokeep></div>
+<script type='module' :src='getBundleFileUrl("js")' webc:keep></script>
