--- a/content/_component/ds-clock.webc
+++ b/content/_component/ds-clock.webc
@@ -119,6 +119,7 @@ function clock_widget({root,zone}){
 
 	const synchronize = function(){
 		const offset = new Date().getTimezoneOffset() / 60
+		clock.zone = -offset
 		clock.zone_disp = clock.zone
 		const t = new Date(Date.now() + 3600e3*(clock.zone + offset))
 		clock.t = t
