--- a/content/_component/ds-clock.webc
+++ b/content/_component/ds-clock.webc
@@ -4,8 +4,8 @@
 	<p>
 		<span class='numdate copy'></span>
 		<span class='weekday_ja copy day-color'></span>
-		<span class='tag floodfill'>🌐</span>
-		<span class='tag zone_tag copy'></span>
+		<span class='tag fade floodfill'>🌐</span>
+		<span class='tag copy'><span class='zone_tag'></span></span>
 	</p>
 	<p class='time copy day-color'>
 		<span class='hours'>&nbsp;&nbsp;</span><span class='sep'>:</span><span class='minutes'>&nbsp;&nbsp;</span><span class='seconds-wrap' style='cursor:zoom-out;'><span><span class='sep'>:</span><span class='seconds'></span></span></span>
@@ -23,25 +23,29 @@
 }
 p {margin:0;overflow:hidden;}
 .copy {cursor:copy; user-select: none;}
+.fade {opacity:.25;}
 .tag {
-	opacity:.25;
 	border-radius: 50%;
-	display:inline-block;
-	height:1.25rem;
-	line-height:1.25rem;
+	height:1.25em;
+	line-height:1.25em;
 	position:absolute;
 	right:0;
-	width:1.25rem;
 	text-align:center;
+	width:1.25em;
 }
 .floodfill {
-  color: transparent;
-  text-shadow: 0 0 0 #808080;
+	color: transparent;
+	text-shadow: 0 0 0 #808080;
 }
 .zone_tag {
+	display:inline-block;
 	font-size:.5em;
 	font-weight:bold;
-	opacity:1;
+	line-height:2.5em;
+	position:absolute;
+	right:0;
+	top:.5px;
+	width:2.5em;
 }
 .seconds-wrap {flex-grow:1; font-size:.5em; line-height:2.75; height:2em;}
 .time {font-size:3.5em; line-height:1; display:flex;}
