--- a/content/_includes/style.css
+++ b/content/_includes/style.css
@@ -48,6 +48,7 @@ ds-clock {
 .big {font-size:2em;}
 .clear {overflow:hidden;}
 .grow {flex-grow:1;}
+.italic {font-style:italic;}
 .menu {
 	border-width:0 0 1em;
 }
