blog renamed to log and improved

--- a/content/_includes/page.webc
+++ b/content/_includes/page.webc
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang='en'>
-<meta charset='utf-8'/>
-<meta name='theme-color' content='#002040'/>
-<meta name='viewport' content='width=device-width, initial-scale=1'/>
+<meta charset='utf-8'>
+<meta name='theme-color' content='#002040'>
+<meta name='viewport' content='width=device-width, initial-scale=1'>
 <title @text='title'></title>
 <link href='/style.css' rel='stylesheet'>
 <link :href='getBundleFileUrl("css")' rel='stylesheet' webc:keep>
