--- a/content/_includes/log.html
+++ b/content/_includes/log.html
@@ -2,5 +2,5 @@
 layout: page
 ---
 <h1>{{title}}</h1>
-<code>{{date | date:'%Y-%m-%d'}}</code>
+<div class='date'>{{date | date:'%Y-%m-%d'}}</div>
 {{content}}
