--- a/content/_includes/page.webc
+++ b/content/_includes/page.webc
@@ -4,6 +4,7 @@
 <meta name='theme-color' content='#002040'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <title @text='title'></title>
+<meta name='description' :content='description||"Ship daily!"'>
 <link href='/style.css' rel='stylesheet'>
 <link :href='getBundleFileUrl("css")' rel='stylesheet' webc:keep>
 <link rel='icon' href='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚢</text></svg>'>
