--- a/content/_includes/log.html
+++ b/content/_includes/log.html
@@ -2,5 +2,6 @@
 layout: page
 ---
 <h1>{{title}}</h1>
-<div class='date'>{{date | date:'%Y-%m-%d'}}</div>
+<div class='date'>{{date | dateString}}</div>
+
 {{content}}
