--- a/content/_includes/style.css
+++ b/content/_includes/style.css
@@ -34,6 +34,7 @@ nav a, nav .a {
 }
 nav li {list-style:none;}
 nav ul {padding:0;margin:0 -1rem;}
+p { max-width: 55em; }
 ul {margin:0;}
 ds-clock {
 	background:rgba(0,0,0,.5);
