--- a/content/index.webc
+++ b/content/index.webc
@@ -14,6 +14,7 @@ description: Ship projects faster than your competitors!
 <nav>
 <ul>
 <li><a href='https://www.11ty.dev/'>Eleventy static site generator</a>
+<li><a href='https://www.isekaikitchen.com/'>Isekai Kitchen cooking & recipes</a>
 </ul>
 </nav>
 <hr>
