--- a/content/_includes/style.css
+++ b/content/_includes/style.css
@@ -1,6 +1,8 @@
 * {box-sizing:border-box;}
 :root {
 	color-scheme:dark;
+	--buoy: #008080;
+	--moor: #F08040;
 }
 body {
 	background:#002040;
@@ -21,7 +23,7 @@ h1 {
 	margin:0;
 }
 hr, .menu {
-	border-color:#008080;
+	border-color:var(--buoy);
 	border-style:dotted;
 	border-width:0 0 .5em;
 }
@@ -47,6 +49,20 @@ ds-clock {
 	padding:4px 4px 4px 6px;
 }
 .big {font-size:2em;}
+.blt li a {
+	padding-left:1.5em;
+}
+.blt li::before {
+	background:var(--moor);
+	border-bottom: #FFF .25em solid;
+	border-radius:.5em .5em .25em .25em;
+	content:'';
+	display:block;
+	height:.5em;
+	margin:.625em .25em;
+	position:absolute;
+	width:1em;
+}
 .clear {overflow:hidden;}
 .date {font-family:'Roboto Mono',monospace;}
 .grow {flex-grow:1;}
