--- a/content/_includes/log.html
+++ b/content/_includes/log.html
@@ -2,6 +2,6 @@
 layout: page
 ---
 <h1>{{title}}</h1>
-<div class='date'>{{date | dateString}}</div>
+<p class='date'>{{date | dateString}}</p>
 
 {{content}}
