--- a/content/_includes/style.css
+++ b/content/_includes/style.css
@@ -3,6 +3,7 @@
 	color-scheme:dark;
 	--buoy:#006060;
 	--moor:#F08040;
+	--pad: 1.5rem;
 }
 body {
 	background:#001830;
@@ -10,7 +11,7 @@ body {
 	font-family:'Roboto',sans-serif;
 	font-size:16px;
 	line-height:1.5;
-	margin:0 1em 1em;
+	margin:0 0 .5lh;
 }
 a {
 	color:#FF9090;
@@ -21,23 +22,30 @@ h1 {
 	font-size:2em;
 	font-variant:small-caps;
 }
-h1, h2 {margin:0 .5rem;}
-hr, .menu {
+h1, h2 {margin:0 var(--pad);}
+li h1 {margin:0;}
+hr, .hr, .hrb {
 	border-color:var(--buoy);
 	border-style:dotted;
-	border-width:0 0 .5em;
+	border-width:.25lh 0 0;
 }
-hr {margin:1em -1em;}
-.brb {margin:0 0 1.5rem;}
+hr {
+	margin:0 calc(-1 * var(--pad)) .25lh;
+	padding:0 0 .25lh;
+}
+.hr {padding:.25lh 0;}
+.hrb {border-width:0 0 .25lh;}
+nav {
+	line-height:2;
+}
 nav a, nav .a {
 	display:block;
-	line-height:2;
-	padding:0 1.5rem;
+	padding:0 var(--pad);
 }
 nav li {list-style:none;}
-nav ul {padding:0;margin:0 -1rem;}
+nav ul {padding:0; margin:0;}
 p {max-width:50em;}
-p, pre {margin:.5rem;}
+p, pre {margin:.5lh var(--pad);}
 ul {margin:0;}
 ds-clock {
 	background:rgba(0,0,0,.5);
@@ -46,10 +54,10 @@ ds-clock {
 	display:block;
 	float:left;
 	font-size:1.5em;
-	margin:0 20px 8px -4px;
+	margin:0 0 0 var(--pad);
 	padding:4px 4px 4px 6px;
 }
-.big {font-size:2em;}
+.big {font-size:2em;line-height:1.5;}
 .blt li a {
 	padding-left:1.5em;
 }
@@ -64,14 +72,19 @@ ds-clock {
 	position:absolute;
 	width:1em;
 }
+.box {overflow:hidden;}
+.brb {margin-bottom:.25lh;}
 .clear {overflow:hidden;}
 .date {font-family:'Roboto Mono',monospace;}
 .grow {flex-grow:1;}
 .italic {font-style:italic;}
 .menu {
-	border-width:0 0 1em;
+	border-width:0 0 .5lh;
 }
-.menu a {padding:1.5rem 1.5rem 0; white-space:nowrap;}
-.menu a h1 {margin:-1.5rem 0 0;}
+.menu a {
+	line-height: 4rem;
+	padding:0 1.5rem;
+	white-space:nowrap;
+}
 .row {display:flex;flex-direction:row;}
 .wrap {flex-wrap:wrap;}
