Block Retro; redirect; storage separate

--- a/content/index.webc
+++ b/content/index.webc
@@ -5,7 +5,8 @@ description: Ship projects faster than your competitors!
 ---
 <nav class='big brb'>
   <ul>
-    <li><a href='/demo/block/'>Block</a>
+    <li><a href='/block/'>Block</a>
+    <li><a href='/block/retro'>Block Retro</a>
     <li><a href='/demo/cannon/'>Cannon</a>
     <li><a href='https://vezquex.github.io/'>Clocks</a>
   </ul>
