--- a/content/index.webc
+++ b/content/index.webc
@@ -7,6 +7,7 @@ description: Ship projects faster than your competitors!
   <ul>
     <li><a href='/block/'>Block</a>
     <li><a href='/block/retro'>Block Retro</a>
+    <li><a href='https://dailyship.org/news/calc/'>Calc</a>
     <li><a href='/demo/cannon/'>Cannon</a>
     <li><a href='https://vezquex.github.io/'>Clocks</a>
   </ul>
