--- a/content/index.webc
+++ b/content/index.webc
@@ -10,6 +10,7 @@ description: Ship projects faster than your competitors!
     <li><a href='https://dailyship.org/news/calc/'>Calc</a>
     <li><a href='/demo/cannon/'>Cannon</a>
     <li><a href='https://vezquex.github.io/'>Clocks</a>
+    <li><a href='/demo/pixel/'>Pixel</a>
   </ul>
 </nav>
 <nav class='hr'>
